XMLtoCSV/objects/unpackaged/objects/Analytics_Files_vod__c.object
<CustomObject>
    <description>Analytics Files stores SFDC records that correspond to the Analytics files loaded via Secure FTP to the VoD Server.  These records are utilized by the Analytics for metadata about the files.</description>
    <fields>
        <fullName>Analytics_Location_vod__c</fullName>
        <description>Custom field leveraged by VInsights for File Identification.</description>
        <label>Analytics Location</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buckets_vod__c</fullName>
        <description>Buckets corresponds to the number of sales data buckets for the Analytics File.  For example, a Monthly file with 2 years worth of data will have a value of 24 for this field.</description>
        <label>Buckets</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Column_Label_vod__c</fullName>
        <description>The Column label defines the type of data stored within the uploaded file.  A few standard examples include: TRx, NRx, NQt, TQt, DDD$, etc.  This value is used to display the Units type on the Analytics Reports page.</description>
        <label>Column Label</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contains_Goals_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the loaded file contains sales goals. Copied during processing from the Data Map Template</description>
        <label>Contains Goals?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Date_vod__c</fullName>
        <description>The Data Date is the Date for the most current Bucket of Sales Data for the Analytics File.</description>
        <label>Data Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Map_Template_Id_vod__c</fullName>
        <description>The 18 Digit SFDC Id of the Data Map Template utilized in processing the Analytics File.</description>
        <label>Data Map Template Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Processed_vod__c</fullName>
        <description>The Date Processed is the Date upon which the User processed the Analytics File to load into the VoD database.</description>
        <label>Date Processed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Decimal_Places_vod__c</fullName>
        <description>Indicates how many numbers should be displayed to the right of the decimal point for figures on VInsights reports driven by the Analytics File. This field does not affect percentage figures on the reports.</description>
        <label>Decimal Places</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enable_Market_Sales_Analysis_Report_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to determine whether the Market Sales Analysis
            Report is enabled</description>
        <label>Enable Market Sales Analysis Report?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_Reports_Status_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Display &quot;true&quot; or &quot;false&quot; to indicate whether there is any error when running Error Reports</description>
        <label>Error Reports Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTP_User_Name_vod__c</fullName>
        <description>Textual Name of the User that performed the FTP of the Sales Data File to the VoD Server.</description>
        <label>FTP User Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name_vod__c</fullName>
        <description>The name of the Analytics File that has been loaded.</description>
        <label>File Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formulary_For_Rep_Label_vod__c</fullName>
        <description>Indicates which columns of data to use for Formulary for the Rep.</description>
        <label>Formulary for Rep Label</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First_Column_Label_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second_Column_Label_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Incremental_Load_Type_vod__c</fullName>
        <description>Not used</description>
        <label>Incremental Load Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incremental_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Incremental_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to determine whether the data file is to be loaded using the JD-NET upload process</description>
        <label>Incremental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mapped_Fields_vod__c</fullName>
        <description>Holds a comma delimited list of certain Data Map Template fields that were mapped when the Analytics File was processed. Fields that will be listed here can include Zip_vod, Brick_vod, Data_Channel_vod.</description>
        <label>Mapped Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Market associated to the Analytics File.</description>
        <label>Market</label>
        <referenceTo>Analytics_Markets_vod__c</referenceTo>
        <relationshipLabel>Analytics Files</relationshipLabel>
        <relationshipName>Analytics_Files_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Markets_Mapped_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Markets Mapped checkbox indicates that the Sales File being loaded contains Multiple Markets of Sales Data and that the Data Map Template utilized, included a mapping for the Market_vod__c field.</description>
        <label>Markets Mapped?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override_Account_Threshold_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mark this checkbox to always download all Sales Data for all Accounts to which the User has access.</description>
        <label>Override Account Threshold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payer_Plan_Mapped_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to determine if the Analytics File includes the Payer / Plan information, such as a Platrak data file.</description>
        <label>Payer/Plan Mapped?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Row_Count_vod__c</fullName>
        <description>Row Count is the number of records contained in the database for the Analytics file.  The Row Count is updated by the loading process.</description>
        <label>Row Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scale_vod__c</fullName>
        <description>Scale determines the type of data buckets loaded.  The two options are monthly or weekly.</description>
        <label>Scale</label>
        <picklist>
            <picklistValues>
                <fullName>Week_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Second_Column_Label_vod__c</fullName>
        <description>The Second Column Label represents the Column Label that corresponds to the second group of Sales Data Buckets in a Sales File. As an example, the Column Label will correspond to buckets B1 through B24 and the Second Column Label will correspond to Buckets B25 through B48.</description>
        <label>Second Column Label</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>The Status of the Analytics File as it has been processed.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Archived_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loaded_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In_Progress_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moved_To_Production_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Territory_Names_Included_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Territory Names Included checkbox is used to determine if the Data Map Template being utilized includes a map to the Territory_Name_vod field in Sales_Transaction_vod. Records inserted with the Territory_Name_vod defined indicated aggregated levels of data in the case that a Customer is defining the aggregation of Territory level data.</description>
        <label>Territory Names Included?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_vod__c</fullName>
        <description>The type of the Analytics File.  This value is set by VoD based on the Data Template that is used to load the file.</description>
        <label>Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Analytics Files</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>File_Name_vod__c</columns>
        <columns>Type_vod__c</columns>
        <columns>Buckets_vod__c</columns>
        <columns>Column_Label_vod__c</columns>
        <columns>Scale_vod__c</columns>
        <columns>Status_vod__c</columns>
        <columns>Payer_Plan_Mapped_vod__c</columns>
        <columns>Data_Date_vod__c</columns>
        <columns>Date_Processed_vod__c</columns>
        <columns>Row_Count_vod__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AF{000000000}</displayFormat>
        <label>File Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Analytics Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>